# deepagents

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: compression_example.py
examples/research/: langgraph.json  requirements.txt  research_agent.py  research_agent_with_compression.py
src/deepagents/: __init__.py  compression.py  graph.py  interrupt.py  model.py  prompts.py  state.py  sub_agent.py  tools.py
